--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,6 @@ img {
 /* Main Layout */
 .container {
   padding: 8.8rem 2.4rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   min-height: 100vh;
 }
 
@@ -170,6 +167,10 @@ img {
 
 /* X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+  .container {
+    padding-top: 10rem;
+  }
+
   .section {
     display: flex;
   }
