--- a/css/style.css
+++ b/css/style.css
@@ -161,8 +161,8 @@ img {
     display: flex;
   }
 
-  .card-text {
-    margin-bottom: 8rem;
+  .card-title {
+    margin-bottom: 4rem;
   }
 
   .card-icon {
@@ -170,7 +170,7 @@ img {
   }
 
   .card-text {
-    margin-bottom: 6.5rem;
+    margin-bottom: 8.5rem;
   }
 }
 
